# xmipp4-hardware-cuda

./: CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build-and-test.yml  deploy.yml
conda/: meta.yaml
include/xmipp4/cuda/: dynamic_shared_object.h
include/xmipp4/cuda/hardware/: cuda_buffer.hpp  cuda_device.hpp  cuda_device_backend.hpp  cuda_device_buffer.hpp  cuda_device_copy.hpp  cuda_device_memory_allocator.hpp  cuda_device_queue.hpp  cuda_device_queue_pool.hpp  cuda_device_to_host_transfer.hpp  cuda_error.hpp  cuda_event.hpp  cuda_host_memory_allocator.hpp  cuda_host_to_device_transfer.hpp  cuda_memory_resource.hpp
include/xmipp4/cuda/hardware/allocator/: cuda_caching_memory_allocator.hpp  cuda_caching_memory_allocator.inl  cuda_deferred_memory_block_release.hpp  cuda_deferred_memory_block_release.inl  cuda_device_malloc.hpp  cuda_device_malloc.inl  cuda_host_malloc.hpp  cuda_host_malloc.inl  cuda_memory_allocator_delete.hpp  cuda_memory_allocator_delete.inl  cuda_memory_block.hpp  cuda_memory_block.inl  cuda_memory_block_cache.hpp  cuda_memory_block_cache.inl  cuda_memory_block_pool.hpp  cuda_memory_block_pool.inl  cuda_memory_block_usage_tracker.hpp  cuda_memory_block_usage_tracker.inl
src/: CMakeLists.txt  cuda_plugin.cpp  cuda_plugin_hook.cpp
src/hardware/: cuda_buffer.cpp  cuda_buffer_implementation.cpp  cuda_buffer_implementation.hpp  cuda_buffer_memcpy.cpp  cuda_buffer_memcpy.hpp  cuda_default_buffer.cpp  cuda_default_buffer.hpp  cuda_device.cpp  cuda_device.hpp  cuda_device_backend.cpp  cuda_device_backend.hpp  cuda_device_copy.cpp  cuda_device_memory_allocator.cpp  cuda_device_memory_heap.cpp  cuda_device_memory_heap.hpp  cuda_device_memory_resource.cpp  cuda_device_memory_resource.hpp  cuda_device_queue.cpp  cuda_device_queue_pool.cpp  cuda_device_to_device_memory_transfer.cpp  cuda_device_to_device_memory_transfer.hpp  cuda_device_to_device_memory_transfer_backend.cpp  cuda_device_to_host_memory_transfer.cpp  cuda_device_to_host_memory_transfer.hpp  cuda_device_to_host_memory_transfer_backend.cpp  cuda_device_to_host_transfer.cpp  cuda_error.cpp  cuda_event.cpp  cuda_host_memory_allocator.cpp  cuda_host_pinned_buffer.cpp  cuda_host_pinned_buffer.hpp  cuda_host_pinned_memory_allocator.cpp  cuda_host_pinned_memory_heap.cpp  cuda_host_pinned_memory_heap.hpp  cuda_host_pinned_memory_resource.cpp  cuda_host_pinned_memory_resource.hpp  cuda_host_to_device_memory_transfer.cpp  cuda_host_to_device_memory_transfer.hpp  cuda_host_to_device_memory_transfer_backend.cpp  cuda_host_to_device_transfer.cpp  (+25 more)
tests/: CMakeLists.txt
tests/integration/src/: test_load.cpp
tests/unitary/src/compute/allocator/: test_cuda_memory_block.cpp  test_cuda_memory_block_usage_tracker.cpp
